<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.ScanFingerprintFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_authentication"
        android:textSize="32sp"
        android:textColor="@color/primary_color"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:paddingTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fingerprint_consstruction"
        android:textSize="20sp"
        android:textColor="@color/primary_color"
        android:gravity="center"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardFingerprint"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:cardCornerRadius="80dp"
        app:cardElevation="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvInstruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:foreground="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/ivFingerprint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            android:focusable="true" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:backgroundTint="@color/secondary_color"
        android:text="@string/cancel"
        android:textSize="20sp"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintTop_toBottomOf="@id/cardFingerprint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.8"/>

</androidx.constraintlayout.widget.ConstraintLayout>